--- a/Typing Test.html
+++ b/Typing Test.html
@@ -22,10 +22,13 @@
     You will write a text word for word. After the text is completed, 
     you will get a result in words per minute.
     </p>
+    <div class="Time">
+    <!--Gör en container för tid kvar-->
     </div>
-    <!--
-    Lägg till grå aside på båda sidorna för att få bättre design och mer information om sidan    
-    -->
+    <div class="Accuracy">
+    <!--Gör en container för accuracy kvar-->
+    </div>
+    </div>
     <footer>
         <p class="FooterText">
         By Adam Sandén and Lukas Gröningsson Björke
