--- a/Typing Test.html
+++ b/Typing Test.html
@@ -9,30 +9,58 @@
         <a href="The Fun Site.html">Home</a>  
         <a href="Typing Test.html">Typing Test</a> 
         <a href="Reaction Speed.html">Reaction Speed</a>
-</nav>
     </nav>
 </header>
 <body>
-    <p class="Titel">
-    Typing Test
-    </p>
-    <div class="Introduktion">
+<p class="Titel">
+Typing Test
+</p>
+<div class="Introduktion">
     <p class="IntroText">
     This test will test your Typing Speed. 
     You will write a text word for word. After the text is completed, 
     you will get a result in words per minute.
     </p>
+    <!--Stats-->
+    <div class="Stats">
     <div class="Time">
-    <!--Gör en container för tid kvar-->
+        <div class="TimeText">
+        Time
+        </div>
+        <div class="TimeNum">
+        60s
+        </div>
     </div>
     <div class="Accuracy">
-    <!--Gör en container för accuracy kvar-->
+        <div class="AccuracyText">
+        Accuracy
+        </div>
+        <div class="AccuracyNum">
+        100
+        </div>
     </div>
     </div>
+    <!--Stats klar-->
+    <!--Display-->
+    <div class="Display">
+        <div class="DisplayText">
+        *The text will be displayed over here*
+        </div>
+    </div>
+    <!--Display klar-->
+    <!--Input-->
+    <div class="Input">
+        <div class="InputText">
+        *The text will be displayed over here*
+        </div>
+    </div>
+    <!--Input klar-->
+</div>
     <footer>
         <p class="FooterText">
-        By Adam Sandén and Lukas Gröningsson Björke
+    By Adam Sandén and Lukas Gröningsson Björke | 20TE<br>
+    High School Project/Gymnasiearbete 2022/2023
         </p>
-        </footer>
+    </footer>
     </body>
 </html>
