--- a/Reaction Speed.html
+++ b/Reaction Speed.html
@@ -25,7 +25,8 @@
     -->
     <footer>
         <p class="FooterText">
-        By Adam Sandén and Lukas Gröningsson Björke
+            By Adam Sandén and Lukas Gröningsson Björke | 20TE<br>
+            High School Project/Gymnasiearbete 2022/2023
         </p>
         </footer>
     </body>
