--- a/Typing Test.html
+++ b/Typing Test.html
@@ -44,14 +44,14 @@ Typing Test
     <!--Display-->
     <div class="Display">
         <div class="DisplayText">
-        *The text will be displayed over here*
+        *The text will be displayed over here*<br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga distinctio voluptatibus quasi soluta tempora itaque repellendus asperiores ullam quidem ut amet, esse nihil blanditiis aliquid beatae modi animi error a.
         </div>
     </div>
     <!--Display klar-->
     <!--Input-->
     <div class="Input">
         <div class="InputText">
-        *The text will be displayed over here*
+        Input Text Here...
         </div>
     </div>
     <!--Input klar-->
