--- a/Reaction Speed.html
+++ b/Reaction Speed.html
@@ -15,11 +15,32 @@
     <p class="Titel">
     Reaction Speed
     </p>
-    <div class="Introduktion">
+<div class="Introduktion">
     <p class="IntroText">
-    This test will test your Reaction Speed in milliseconds.
+    This test will test your Reaction Speed in milliseconds. After the red button is pressed, wait for the button to turn green.
+    As soon as the green color is displayed, press the button. Your average reaction speed will be revealed after 5 repetitions of the test.
     </p>
+    <div id="ClickBox">
+        *Click here to start test*
     </div>
+        <div class="ResultBoxes">
+            <div class="ResultBox1">
+                Result 1
+            </div>
+            <div class="ResultBox2">
+                Result 2
+            </div>
+            <div class="ResultBox3">
+                Result 3
+            </div>
+            <div class="ResultBox4">
+                Result 4
+            </div>
+            <div class="ResultBox5">
+                Result 5
+            </div>
+        </div>    
+</div>
     <!--
     Lägg till grå aside på båda sidorna för att få bättre design och mer information om sidan    
     -->
