--- a/Typing Test.html
+++ b/Typing Test.html
@@ -15,22 +15,14 @@
 <p class="Titel">
 Typing Test
 </p>
-<div class="Introduktion">
-    <p class="IntroText">
+<div class="Header">
+    <p class="HeaderText">
     This test will test your Typing Speed. 
-    You will write a text word for word. After the text is completed, 
-    you will get a result in words per minute.
+    You will write a text word for word. After each text is done, another one will appear until the timer runs out.
+    When the timer runs out, you will get a result in words per minute, accuracy and ammount of errors.
     </p>
     <!--Stats-->
-    <div class="Stats">
-    <div class="Time">
-        <div class="TimeText">
-        Time
-        </div>
-        <div class="TimeNum">
-        60s
-        </div>
-    </div>
+<div class="Stats">
     <div class="Accuracy">
         <div class="AccuracyText">
         Accuracy
@@ -39,22 +31,53 @@ Typing Test
         100
         </div>
     </div>
-    </div>
-    <!--Stats klar-->
-    <!--Display-->
-    <div class="Display">
-        <div class="DisplayText">
-        *The text will be displayed over here*<br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga distinctio voluptatibus quasi soluta tempora itaque repellendus asperiores ullam quidem ut amet, esse nihil blanditiis aliquid beatae modi animi error a.
+    <div class="Time">
+        <div class="TimeText">
+        Time
         </div>
+        <div class="TimeNum">
+        60s
+        </div>
+    </div>
+    <div class="Errors">
+        <div class="ErrorText">
+        Errors
+        </div>
+        <div class="ErrorNum">
+        0
+        </div>
+    </div>
+    <div class="WPM">
+        <div class="WPMText">
+        WPM
+        </div>
+        <div class="WPMNum">
+        100
+        </div>
+    </div>
+    <div class="CPM">
+        <div class="CPMText">
+        CPM
+        </div>
+        <div class="CPMNum">
+        100
+        </div>
+</div>
+</div>
+<!--Stats klar-->
+    <!--Display-->
+    <div class="Quote">
+        *Click on the text below to start the game*
     </div>
     <!--Display klar-->
     <!--Input-->
     <div class="Input">
-        <div class="InputText">
-        Input Text Here...
-        </div>
+    <textarea class="InputArea" placeholder="Start typing here..." oninput="processCurrentText()"onfocus="startGame()"></textarea>
     </div>
     <!--Input klar-->
+    <button class="RestartButton" onclick="resetValues()">
+    Restart
+    </button>
 </div>
     <footer>
         <p class="FooterText">
@@ -62,5 +85,64 @@ Typing Test
     High School Project/Gymnasiearbete 2022/2023
         </p>
     </footer>
+            <script src="Interaktion.js"></script>
     </body>
+<!--
 </html>
+<html lang="en">
+<head>
+	<title>Simple Speed Typer</title>
+                                            -->
+	<!-- link the CSS file here -->
+<!--
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+<div class="container">
+	<div class="heading">
+	Simple Speed Typing
+	</div>
+	<div class="header">
+	<div class="wpm">
+		<div class="header_text">WPM</div>
+		<div class="curr_wpm">100</div>
+	</div>
+	<div class="cpm">
+		<div class="header_text">CPM</div>
+		<div class="curr_cpm">100</div>
+	</div>
+	<div class="errors">
+		<div class="header_text">Errors</div>
+		<div class="curr_errors">0</div>
+	</div>
+	<div class="timer">
+		<div class="header_text">Time</div>
+		<div class="curr_time">60s</div>
+	</div>
+	<div class="accuracy">
+		<div class="header_text">% Accuracy</div>
+		<div class="curr_accuracy">100</div>
+	</div>
+	</div>
+
+	<div class="quote">
+	Click on the area below to start the game.
+	</div>
+	<textarea class="input_area"
+	placeholder="start typing here..."
+	oninput="processCurrentText()"
+	onfocus="startGame()">
+	</textarea>
+	<button class="restart_btn"
+	onclick="resetValues()">
+	Restart
+	</button>
+</div>
+                                            -->
+<!-- link the JavaScript file here -->
+<!--
+<script src="game.js">
+</script>
+</body>
+</html>
+                                            -->
