--- a/Reaction Speed.html
+++ b/Reaction Speed.html
@@ -15,7 +15,7 @@
     <p class="Titel">
     Reaction Speed
     </p>
-<div class="Introduktion">
+<div class="Header">
     <p class="IntroText">
     This test will test your Reaction Speed in milliseconds. After the red button is pressed, wait for the button to turn green.
     As soon as the green color is displayed, press the button. Your average reaction speed will be revealed after 5 repetitions of the test.
