Update The Fun Site.html

--- a/The Fun Site.html
+++ b/The Fun Site.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang=en>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -15,17 +15,10 @@
 <p class="Titel">
 Welcome to the Fun Site!
 </p>
-<div class="Introduktion">
-<p class="IntroText">
-The Fun Site is an interactive website with multiple tests. These tests determine things such as your typing speed and
-your reaction time. On the top of the screen, you can choose between these different tests. The point of the website
-is to test your mind.
-</div>
-<footer>
-    <p class="FooterText">
-    By Adam Sandén and Lukas Gröningsson Björke | 20TE<br>
-    High School Project/Gymnasiearbete 2022/2023
+<div class="Header">
+    <p class="IntroText">
+    The Fun Site is an interactive website with multiple tests. These tests determine things such as your typing speed and
+    your reaction time. On the top of the screen, you can choose between these different tests. The point of the website
+    is to test your mind.
     </p>
-    </footer>
-</body>
-</html>
+</div>
