--- a/Typing Test.html
+++ b/Typing Test.html
@@ -16,7 +16,7 @@
 Typing Test
 </p>
 <div class="Header">
-    <p class="HeaderText">
+    <p class="IntroText">
     This test will test your Typing Speed. 
     You will write a text word for word. After each text is done, another one will appear until the timer runs out.
     When the timer runs out, you will get a result in words per minute, accuracy and ammount of errors.
@@ -87,8 +87,8 @@ Typing Test
     </footer>
             <script src="Interaktion.js"></script>
     </body>
-<!--
 </html>
+<!--
 <html lang="en">
 <head>
 	<title>Simple Speed Typer</title>
