--- a/Reaction Speed.html
+++ b/Reaction Speed.html
@@ -20,27 +20,18 @@
     This test will test your Reaction Speed in milliseconds. After the red button is pressed, wait for the button to turn green.
     As soon as the green color is displayed, press the button. Your average reaction speed will be revealed after 5 repetitions of the test.
     </p>
-    <div id="ClickBox">
-        *Click here to start test*
+    <div id="app">
+        <div class="click-area">
+          <div class="display-text">Welcome. Click to start!</div>
+        </div>
+        <div class="recent-scores">
+          <div class="score">-</div>
+          <div class="score">-</div>
+          <div class="score">-</div>
+          <div class="score">-</div>
+          <div class="score">-</div>
+        </div>
     </div>
-        <div class="ResultBoxes">
-            <div class="ResultBox1">
-                Result 1
-            </div>
-            <div class="ResultBox2">
-                Result 2
-            </div>
-            <div class="ResultBox3">
-                Result 3
-            </div>
-            <div class="ResultBox4">
-                Result 4
-            </div>
-            <div class="ResultBox5">
-                Result 5
-            </div>
-        </div>    
-</div>
     <!--
     Lägg till grå aside på båda sidorna för att få bättre design och mer information om sidan    
     -->
@@ -50,5 +41,6 @@
             High School Project/Gymnasiearbete 2022/2023
         </p>
         </footer>
+<script src="JavaSpeed.js"></script>
     </body>
 </html>
