--- a/Typing Test.html
+++ b/Typing Test.html
@@ -1,90 +1,65 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Simple Speed Typer</title>
+ 
+    <!-- link the CSS file here -->
+    <link rel="stylesheet" href="tt.css">
 </head>
 <header>
     <nav>
         <a href="The Fun Site.html">Home</a>  
-        <a href="Typing Test.html">Typing Test</a> 
+        <a href="Typing Testeth.html">Typing Test</a> 
         <a href="Reaction Speed.html">Reaction Speed</a>
     </nav>
 </header>
 <body>
-<p class="Titel">
-Typing Test
-</p>
-<div class="Header">
-    <p class="IntroText">
+  <p class="Titel">
+    Typing Test
+  </p>
+<div class="container">
+  <p class="IntroText">
     This test will test your Typing Speed. 
     You will write a text word for word. After each text is done, another one will appear until the timer runs out.
     When the timer runs out, you will get a result in words per minute, accuracy and ammount of errors.
     </p>
-    <!--Stats-->
-<div class="Stats">
-    <div class="Accuracy">
-        <div class="AccuracyText">
-        Accuracy
-        </div>
-        <div class="AccuracyNum">
-        100
-        </div>
+  <div class="header">
+      <div class="wpm">
+        <div class="header_text">WPM</div>
+        <div class="curr_wpm">100</div>
+      </div>
+      <div class="cpm">
+        <div class="header_text">CPM</div>
+        <div class="curr_cpm">100</div>
+      </div>
+      <div class="errors">
+        <div class="header_text">Errors</div>
+        <div class="curr_errors">0</div>
+      </div>
+      <div class="timer">
+        <div class="header_text">Time</div>
+        <div class="curr_time">60s</div>
+      </div>
+      <div class="accuracy">
+        <div class="header_text">% Accuracy</div>
+        <div class="curr_accuracy">100</div>
+      </div>
+  </div>
+    <div class="quote">
+      Click on the area below to start the game.
     </div>
-    <div class="Errors">
-        <div class="ErrorText">
-        Errors
-        </div>
-        <div class="ErrorNum">
-        0
-        </div>
-    </div>
-    <div class="Time">
-        <div class="TimeText">
-        Time
-        </div>
-        <div class="TimeNum">
-        60s
-        </div>
-    </div>
-    <div class="WPM">
-        <div class="WPMText">
-        WPM
-        </div>
-        <div class="WPMNum">
-        100
-        </div>
-    </div>
-    <div class="CPM">
-        <div class="CPMText">
-        CPM
-        </div>
-        <div class="CPMNum">
-        100
-        </div>
-    </div>
-</div>
-<!--Stats klar-->
-    <!--Display-->
-    <div class="Quote">
-        *Click on the text below to start the game*
-    </div>
-    <!--Display klar-->
-    <!--Input-->
-    <div class="Input">
-    <textarea class="InputArea" placeholder="Start typing here..." oninput="processCurrentText()"onfocus="startGame()"></textarea>
-    </div>
-    <!--Input klar-->
-    <button class="RestartButton" onclick="resetValues()">
-    Restart
+    <textarea class="input_area"
+      placeholder="start typing here..."
+      oninput="processCurrentText()"
+      onfocus="startGame()">
+    </textarea>
+    <button class="restart_btn"
+      onclick="resetValues()">
+      Restart
     </button>
 </div>
-    <footer>
-        <p class="FooterText">
-    By Adam Sandén and Lukas Gröningsson Björke | 20TE<br>
-    High School Project/Gymnasiearbete 2022/2023
-        </p>
-    </footer>
-            <script src="Interaktion.js"></script>
-    </body>
+ 
+  <!-- link the JavaScript file here -->
+  <script src="Interaktion.js">
+  </script>
+</body>
 </html>
