--- a/Typing Test.html
+++ b/Typing Test.html
@@ -1,8 +1,8 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Simple Speed Typer</title>
- 
-    <!-- link the CSS file here -->
+    <meta charset="UTF-8">
+    <title>Typing Test</title>
     <link rel="stylesheet" href="tt.css">
 </head>
 <header>
@@ -19,8 +19,8 @@
 <div class="container">
   <p class="IntroText">
     This test will test your Typing Speed. 
-    You will write a text word for word. After each text is done, another one will appear until the timer runs out.
-    When the timer runs out, you will get a result in words per minute, accuracy and ammount of errors.
+    You will write a quote word for word. After each quote is done, another one will appear until the timer runs out.
+    When the timer runs out, you will get a result in WPM and CPM.
     </p>
   <div class="header">
       <div class="wpm">
@@ -56,6 +56,9 @@
       onclick="resetValues()">
       Restart
     </button>
+    <p class="OutroText">
+      WPM: Words Per Minute | CPM: Characters Per Minute
+      </p>
 </div>
  
   <!-- link the JavaScript file here -->
