--- a/Reaction Speed.html
+++ b/Reaction Speed.html
@@ -9,8 +9,8 @@
 </head>
 <header>
     <nav>
-        <a href="The Fun Site.html">Home</a>  
-        <a href="Typing Test.html">Typing Test</a> 
+      <a href="Typing Testeth.html">Typing Test</a> 
+        <a href="index.html">Home</a>  
         <a href="Reaction Speed.html">Reaction Speed</a>
     </nav>
 </header>
