Update The Fun Site.html

--- a/The Fun Site.html
+++ b/The Fun Site.html
@@ -2,23 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Home</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" type="image/icon" href="Drool.jpg">
 </head>
 <header>
     <nav>
-        <a href="The Fun Site.html">Home</a>  
-        <a href="Typing Test.html">Typing Test</a> 
+        <a href="Typing Testeth.html">Typing Test</a> 
+        <a href="index.html">Home</a>  
         <a href="Reaction Speed.html">Reaction Speed</a>
     </nav>
 </header>
 <body>
-<p class="Titel">
-Welcome to the Fun Site!
-</p>
-<div class="Header">
+<div class="headerDiv">
+    <p class="Titel">
+        Welcome to the Fun Site!
+        </p>
+    <img src="TheFunSite Logo.png" class="imgLogo">
     <p class="IntroText">
     The Fun Site is an interactive website with multiple tests. These tests determine things such as your typing speed and
-    your reaction time. On the top of the screen, you can choose between these different tests. The point of the website
+    your reaction time. <br>
+    On the top of the screen, you can choose between these different tests. The point of the website
     is to test your mind.
     </p>
+    
 </div>
+</body>
+</html>
