--- a/Typing Test.html
+++ b/Typing Test.html
@@ -7,16 +7,16 @@
 </head>
 <header>
     <nav>
-        <a href="The Fun Site.html">Home</a>  
         <a href="Typing Testeth.html">Typing Test</a> 
+        <a href="index.html">Home</a>  
         <a href="Reaction Speed.html">Reaction Speed</a>
     </nav>
 </header>
 <body>
+<div class="container">
   <p class="Titel">
     Typing Test
   </p>
-<div class="container">
   <p class="IntroText">
     This test will test your Typing Speed. 
     You will write a quote word for word. After each quote is done, another one will appear until the timer runs out.
