--- a/Typing Testeth.html
+++ b/Typing Testeth.html
@@ -9,7 +9,7 @@
 <header>
     <nav>
         <a href="Typing Testeth.html">Typing Test</a> 
-        <a href="index.php">Home</a>  
+        <a href="index.html">Home</a>  
         <a href="Reaction Speed.html">Reaction Speed</a>
     </nav>
 </header>
